--- a/templates/main.html
+++ b/templates/main.html
@@ -76,7 +76,11 @@
 
     </div> <!-- /container -->
 
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+
+    <script>
+        window.jQuery || document.write('<scr'+'ipt src="/js/jquery-1.7.min.js"><\/scr'+'ipt>');
+    </script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
