--- a/templates/main.html
+++ b/templates/main.html
@@ -1,48 +1,7 @@
-<!DOCTYPE html>
-{% autoescape true %}
-<html lang="en">
-  <head>
-    <title>{{ page_title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-      <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
-    <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-  </head>
-  <body>
-   <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">{{ site_name }}</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              {% for item in main_menu %}
-                {% if item.active %}<li class="active">{% else %}<li>{% endif %}<a href="{{ item.link }}">{{ item.title }}</a></li>
-              {% endfor %}
-            </ul>
-            <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
-              <input class="span2" type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-            </form>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+{% extends "/templates/page.html" %}
 
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
+{% block content %}
+    <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
@@ -67,22 +26,4 @@
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
       </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-
-    <script>
-        window.jQuery || document.write('<scr'+'ipt src="/js/jquery-1.7.min.js"><\/scr'+'ipt>');
-    </script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-
-  </body>
-</html>
-{% endautoescape %}
+{% endblock %}
