--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -10,7 +10,7 @@
         </div>
         <div class="span10">
           <!--Body content-->
-          <p>Body content</p>
+          {{ html }}
         </div>
       </div>
     </div>
