xslt transform fixes and experiments

--- a/templates/page.html
+++ b/templates/page.html
@@ -13,6 +13,7 @@
       }
     </style>
     <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    {% block additional_css %}{% endblock %}
   </head>
   <body>
    <div class="navbar navbar-inverse navbar-fixed-top">
