--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -15,3 +15,8 @@
       </div>
     </div>
 {% endblock %}
+
+{% block additional_css %}
+    <link href="/css/common.css" rel="stylesheet">
+    <link href="/css/apache.css" rel="stylesheet">
+{% endblock %}
