apache docs improvements. Templates encoded to UTF-8

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "/templates/page.html" %}
+﻿{% extends "/templates/page.html" %}
 
 {% block content %}
     <!-- Main hero unit for a primary marketing message or call to action -->
