--- a/templates/bit/top_bar.html
+++ b/templates/bit/top_bar.html
@@ -11,6 +11,12 @@
       </a>
       <div class="nav-collapse collapse">
         <ul class="nav">
+        <li>
+            <a href={{ url_for('portfolio.index') }}>
+                Портфель
+            </a>
+        </li>
+
           # include 'bit/contact_menu.html'
         </ul>
         <ul class="nav pull-right">
