--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,17 @@
 
   <body>
     # include 'bit/top_bar.html'
+    <div class="container">
+        <div class="row">
+            <div class="span12">
+                <ul class="breadcrumb">
+                    {% block breadcrumbs %}
+                    {% endblock %}
+                </ul>
+            </div>
+            <hr>
+        </div>
+    </div>
     <div class="container main-container">
       # include 'bit/notifications.html'
       # block content
