--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,11 @@
 # extends 'base.html'
 
+{% block breadcrumbs %}
+    <li class="active">
+        Главная
+    </li>
+{% endblock %}
+
 # block content
     <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
