--- a/apps/portfolio/templates/portfolio/apache.html
+++ b/apps/portfolio/templates/portfolio/apache.html
@@ -6,7 +6,7 @@
         <div class="row-fluid">
             <div class="span12">
                 <!--Body content-->
-                {{ html }}
+                {{ html | safe }}
             </div>
         </div>
     </div>
