--- a/apps/portfolio/templates/portfolio/apache.html
+++ b/apps/portfolio/templates/portfolio/apache.html
@@ -27,6 +27,6 @@
         <span class="divider"> &rarr; </span>
     </li>
     <li class="active">
-        {{ page_title }}
+        {{ title }}
     </li>
 {% endblock %}
