--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
 
   <body>
     # include 'bit/top_bar.html'
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row-fluid">
             <div class="span12">
                 <ul class="breadcrumb">
                     {% block breadcrumbs %}
@@ -32,7 +32,7 @@
             <hr>
         </div>
     </div>
-    <div class="container main-container">
+    <div class="container-fluid main-container">
       # include 'bit/notifications.html'
       # block content
       # endblock
