--- a/apps/portfolio/templates/portfolio/apache.html
+++ b/apps/portfolio/templates/portfolio/apache.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+﻿{% extends 'base.html' %}
 
 {% block content %}
     <div class="row-fluid">
@@ -21,6 +21,7 @@
         </div>
         <div class="span12">
           <!--subsections-->
+          {% include 'bit/sidebar.html' %}
         </div>
     </div>
     </div>
