--- a/apps/portfolio/templates/portfolio/index.html
+++ b/apps/portfolio/templates/portfolio/index.html
@@ -19,7 +19,7 @@
             </h1>
         </div>
         <div class="span12">
-          <!--subsections-->
+          {% include 'bit/sidebar.html' %}
         </div>
     </div>
     </div>
