opinions section draft added

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     # include 'bit/top_bar.html'
     # if breadcrumbs
     <div class="container-fluid">
-        <div class="row">
+        <div class="row-fluid">
             <div class="span12">
                 <ul class="breadcrumb">
                     {% block breadcrumbs %}
