--- a/templates/bit/form_textarea_field.html
+++ b/templates/bit/form_textarea_field.html
@@ -1,7 +1,7 @@
 <div class="control-group {% if form_field.errors %} error {% endif %}">
   {{form_field.label(class='control-label')}}
   <div class="controls">
-    {{form_field(class='span4', rows=8)}}
+    {{form_field(class='redactor span4', rows=8, style='min-height: 200px;')}}
     # for error in form_field.errors
       <span class="help-block">{{error}}</span>
     # endfor
