--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,14 +4,12 @@
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
     {% if headline %}
-        {% for post in headline %}
-            <h1>{{ post.title }}</h1>
-            <p>{{ post.short_text|safe }}</p>
-            {% if post.text %}
-                <p><a href="{{ url_for('news.post', key_id=post.key.id()) }}" class="btn btn-primary btn-large">Читать
-                    дальше &raquo;</a></p>
-            {% endif %}
-        {% endfor %}
+        <h1>{{ headline.title }}</h1>
+        <p>{{ headline.short_text|safe }}</p>
+        {% if headline.text %}
+            <p><a href="{{ url_for('news.post', key_id=headline.key.id()) }}" class="btn btn-primary btn-large">Читать
+                дальше &raquo;</a></p>
+        {% endif %}
     {% else %}
         <h1>Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called the
@@ -37,6 +35,8 @@
                     <a class="btn pull-right" href="{{ url_for('news.index') }}">Остальные &rarr;</a>
                 </div>
             {% endif %}
+        {% else %}
+            <p>Пока ничего нового.</p>
         {% endif %}
     </div>
     <div class="span6">
