cosmetics: style improvements

--- a/static/src/less/variables.less
+++ b/static/src/less/variables.less
@@ -1,1 +1,6 @@
 @FontAwesomePath: "/p/font";
+@navbarBackgroundHighlight: rgb(104, 148, 216);
+@navbarText:                      white;
+@navbarLinkColor:                 white;
+@navbarLinkColorHover:            #ddd;
+@navbarLinkColorActive:           #eee;
