--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -4,7 +4,7 @@
   <div class="page-header">
     <h1>
       {{title}}
-      <small>Any questions or suggestions are welcome</small>
+      <small>Есть вопросы и предложения? Всегда пожалуйста :)</small>
     </h1>
   </div>
   <div class="row">
@@ -23,7 +23,7 @@
           # include 'bit/form_text_field.html'
 
           <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Sending Feedback..">
-            Send Feedback
+            Оправить
           </button>
         </fieldset>
       </form>
