--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <p class="muted pull-right">
       # if current_user.admin
-        | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">View in JSON</a>
+        | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">Смотреть в JSON</a>
       # endif
     </p>
     <p class="muted">&copy; 2013 - Александр Егоров</p>
