--- a/templates/bit/user_menu.html
+++ b/templates/bit/user_menu.html
@@ -6,18 +6,18 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="{{url_for('profile')}}"><i class="icon-edit"></i> Profile Settings</a></li>
+      <li><a href="{{url_for('profile')}}"><i class="icon-edit"></i> Настройки профиля</a></li>
       # if current_user.admin
         <li class="divider"></li>
-        <li><a href="{{url_for('admin_config_update')}}"><i class="icon-cog"></i> Admin Config</a></li>
-        <li><a href="{{url_for('user_list', order='-created')}}"><i class="icon-group"></i> User List</a></li>
+        <li><a href="{{url_for('admin_config_update')}}"><i class="icon-cog"></i> Админка</a></li>
+        <li><a href="{{url_for('user_list', order='-created')}}"><i class="icon-group"></i> Пользователи</a></li>
         <li class="divider"></li>
       # endif
-      <li><a href="{{url_for('signout')}}"><i class="icon-signout"></i> Sign out</a></li>
+      <li><a href="{{url_for('signout')}}"><i class="icon-signout"></i> Выход</a></li>
     </ul>
   </li>
 # else
   <li class="{% if html_class == 'signin' %} active {% endif %}">
-    <a href="{{url_for('signin')}}"><i class="icon-signin"></i> Sign in</a>
+    <a href="{{url_for('signin')}}"><i class="icon-signin"></i> Вход</a>
   </li>
 # endif
