--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
           {{form.csrf_token}}
 
           <div class="control-group ">
-            <label class="control-label" for="username">Username</label>
+            <label class="control-label" for="username">Имя пользователя</label>
             <div class="controls">
               <input class="span4" id="username" name="username" type="text" value="{{user_db.username}}" readonly="readonly">
             </div>
@@ -28,7 +28,7 @@
           # set form_field = form.email
           # include 'bit/form_text_field.html'
 
-          <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Updating Profile..">
+          <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Обновление профиля...">
             Update Profile
           </button>
         </fieldset>
