cosmetics: signin text corrected

--- a/templates/bit/user_menu.html
+++ b/templates/bit/user_menu.html
@@ -18,6 +18,6 @@
   </li>
 # else
   <li class="{% if html_class == 'signin' %} active {% endif %}">
-    <a href="{{url_for('signin')}}"><i class="icon-signin"></i> Вход</a>
+    <a href="{{url_for('signin')}}"><i class="icon-signin"></i> Войти</a>
   </li>
 # endif
