files section added into admin

--- a/templates/admin/top_bar.html
+++ b/templates/admin/top_bar.html
@@ -22,6 +22,9 @@
                         <li>
                             <a href="{{ url_for('admin.news.index') }}">Новости</a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('admin.file.index') }}">Файлы</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
