--- a/apps/portfolio/templates/portfolio/apache_documents_list.html
+++ b/apps/portfolio/templates/portfolio/apache_documents_list.html
@@ -1,7 +1,7 @@
 {% if apache_docs %}
 <dl>
     {% for item in apache_docs %}
-        <dt><a href="{{ url_for('portfolio.apache') }}{{ item }}.html">{{ apache_docs[item][1] }}</a></dt>
+        <dt><a href="{{ url_for('portfolio.index') }}{{ item }}.html">{{ apache_docs[item][1] }}</a></dt>
         <dd>{{ apache_docs[item][2] }}</dd>
     {% endfor %}
 </dl>
