--- a/apps/portfolio/templates/portfolio/index.html
+++ b/apps/portfolio/templates/portfolio/index.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="hero-unit">
+        <h1>Эбаут</h1>
+
+        <p>Софт, код, документация и прочие полезности.</p>
+    </div>
     <div class="row-fluid">
-    <div class="span9">
-        <div class="span12">
-            <h1 class="page-header">
-                {{ title }}
-            </h1>
+        <div class="span6">
+            <h1>Про апачей</h1>
+            {% include 'portfolio/apache_documents_list.html' %}
         </div>
-        <div class="span12">
-          <!--Body content-->
+        <div class="span6">
+            <h1>Загрузки</h1>
+            {% include 'portfolio/downloads.html' %}
         </div>
-    </div>
-    <div class="span3">
-        <div class="span12">
-          {% include 'bit/sidebar.html' %}
-        </div>
-    </div>
     </div>
 {% endblock %}
