opinions redirect added. News title changed on welcome page

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
 <!-- Example row of columns -->
 <div class="row-fluid">
     <div class="span6">
-        <h2>Журнал</h2>
+        <h2>Блог</h2>
         {% if posts %}
             {% for post in posts %}
                 <div class="span12">
