blog items list and page redesign

--- a/apps/news/templates/news/post_box.html
+++ b/apps/news/templates/news/post_box.html
@@ -1,7 +1,2 @@
-<section>
-    <h3><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small><br>{{ post.title }}</h3>
-    {{ post.short_text|safe }}
-    {% if post.text %}
-        <a href="{{ url_for('news.post', key_id=post.key.id()) }}" class="btn btn-mini">More ...</a>
-    {% endif %}
-</section>
+    <dt><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small>&nbsp;<a href="{{ url_for('news.post', key_id=post.key.id()) }}">{{ post.title }}</a></dt>
+    <dd>{{ post.short_text|safe }}</dd>
