--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-    <h2>{{ post.title }}</h2>
-    {% if post.text %}
-        {{ post.text|safe }}
-    {% else %}
-        {{ post.short_text|safe }}
-    {% endif %}
+    <div class="row-fluid">
+        <div class="span9">
+            <h3><small><i class="icon-calendar"></i> <span class="shortDateFormat">{{ post.created }}</span></small></h3>
+            {% if post.text %}
+                {{ post.text|safe }}
+            {% else %}
+                {{ post.short_text|safe }}
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
