blog posts XML type support added

--- a/apps/news/admin/templates/news/admin/post_edit.html
+++ b/apps/news/admin/templates/news/admin/post_edit.html
@@ -7,7 +7,10 @@
 {% block scripts %}
     <script>
         $(function(){
-            $('.redactor').redactor();
+            $('.redactor').redactor({
+                linebreaks: true,
+                cleanup: true
+            });
         });
     </script>
 {% endblock %}
