--- a/static/src/less/apache.less
+++ b/static/src/less/apache.less
@@ -1,3 +1,4 @@
+@import "variables";
 
 pre.code, code {
   color: #0d0d97;
@@ -96,5 +97,11 @@ div.warning {
 table {
   div.example {
     margin-right: 1em;
+  }
+}
+
+.fileIntTable {
+  th, td {
+    border: @navbarBackgroundHighlight 1px solid;
   }
 }
