--- a/apps/portfolio/templates/portfolio/index.html
+++ b/apps/portfolio/templates/portfolio/index.html
@@ -6,7 +6,7 @@
 
         <p>Софт, код, документация и прочие полезности.</p>
     </div>
-    <div class="row-fluid">
+    <div class="row">
         <div class="span6">
             <h1>Про апачей</h1>
             {% include 'portfolio/apache_documents_list.html' %}
