--- a/apps/portfolio/templates/portfolio/apache_document.html
+++ b/apps/portfolio/templates/portfolio/apache_document.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    <div class="container-fluid">
-        <div class="row-fluid">
+    <div class="container">
+        <div class="row">
             <div class="span12">
                 <!--Body content-->
                 {{ html | safe }}
