--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  <div class="container-fluid">
+  <div class="container">
     <p class="muted pull-right">
       # if current_user.admin
         | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">Смотреть в JSON</a>
