--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
   <body>
     # include 'bit/top_bar.html'
     # if breadcrumbs
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row-fluid">
             <div class="span12">
                 <ul class="breadcrumb">
                     {% block breadcrumbs %}
@@ -42,7 +42,7 @@
         </div>
     </div>
     # endif
-    <div class="container main-container">
+    <div class="container-fluid main-container">
       # include 'bit/notifications.html'
       # block content
       # endblock
