--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -7,7 +7,7 @@
     </h1>
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="span12">
       <div class="well well-small">
         <div class="btn-group">
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row-fluid">
     <div class="span12">
       <table class="table table-bordered">
         <thead>
@@ -115,7 +115,7 @@
     </div>
   </div>
   # if more_url
-    <div class="row">
+    <div class="row-fluid">
       <div class="span12">
         <ul class="pager">
           <li>
