--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,7 +2,7 @@
 
 # block content
 <!-- Example row of columns -->
-<div class="row">
+<div class="row-fluid">
     <div class="span6">
         <h2><a href="{{ url_for('news.index') }}">Блог</a></h2>
         {% if posts %}
