title as hero unit header

--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
-        <h1>Блог</h1>
+        <h1>{{ title }}</h1>
 
         <p>Многое из того, что написано на этом сайте сильно устарело и/или является неверным и смешным. В какой-то
             мере
